@@ -27,6 +27,7 @@ import org.elasticsearch.test.cluster.LogType;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xcontent.json.JsonXContent;
+import org.elasticsearch.xpack.esql.core.plugin.EsqlCorePlugin;
 import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.qa.rest.RestEsqlTestCase;
 import org.elasticsearch.xpack.esql.tools.ProfileParser;
@@ -42,6 +43,7 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
@@ -672,19 +674,25 @@ public class RestEsqlIT extends RestEsqlTestCase {
                   "type": "Point",
                   "coordinates": [-77.03653, 38.897676]
                 }
-                """),
-            Map.entry(DataType.AGGREGATE_METRIC_DOUBLE, """
+                """)
+        );
+        if (EsqlCorePlugin.AGGREGATE_METRIC_DOUBLE_FEATURE_FLAG.isEnabled()) {
+            typesAndValues = new HashMap<>(typesAndValues);
+            typesAndValues.put(DataType.AGGREGATE_METRIC_DOUBLE, """
                 {
                   "max": 14983.1
                 }
-                """)
-        );
+                """);
+        }
         Set<DataType> shouldBeSupported = Stream.of(DataType.values()).filter(DataType::isRepresentable).collect(Collectors.toSet());
         shouldBeSupported.remove(DataType.CARTESIAN_POINT);
         shouldBeSupported.remove(DataType.CARTESIAN_SHAPE);
         shouldBeSupported.remove(DataType.NULL);
         shouldBeSupported.remove(DataType.DOC_DATA_TYPE);
         shouldBeSupported.remove(DataType.TSID_DATA_TYPE);
+        if (EsqlCorePlugin.AGGREGATE_METRIC_DOUBLE_FEATURE_FLAG.isEnabled() == false) {
+            shouldBeSupported.remove(DataType.AGGREGATE_METRIC_DOUBLE);
+        }
         for (DataType type : shouldBeSupported) {
             assertTrue(typesAndValues.containsKey(type));
         }
@@ -699,13 +707,13 @@ public class RestEsqlIT extends RestEsqlTestCase {
                         "default_metric": "max"
                     """;
             }
-            createIndex("index-" + type.esType(), null, """
+            createIndex("index-" + type.esType(), null, String.format(Locale.ROOT, """
                  "properties": {
                    "my_field": {
                      "type": "%s" %s
                    }
                  }
-                """.formatted(type.esType(), additionalProperties));
+                """, type.esType(), additionalProperties));
             Request doc = new Request("PUT", "index-" + type.esType() + "/_doc/1");
             doc.setJsonEntity("{\"my_field\": " + typesAndValues.get(type) + "}");
             client().performRequest(doc);
@@ -716,11 +724,11 @@ public class RestEsqlIT extends RestEsqlTestCase {
 
         for (int i = 0; i < listOfTypes.size(); i++) {
             for (int j = i + 1; j < listOfTypes.size(); j++) {
-                String query = """
+                String query = String.format(Locale.ROOT, """
                     {
                         "query": "FROM index-%s,index-%s | LIMIT 100 | KEEP my_field"
                     }
-                    """.formatted(listOfTypes.get(i).esType(), listOfTypes.get(j).esType());
+                    """, listOfTypes.get(i).esType(), listOfTypes.get(j).esType());
                 Request request = new Request("POST", "/_query");
                 request.setJsonEntity(query);
                 Response resp = client().performRequest(request);
@@ -741,11 +749,13 @@ public class RestEsqlIT extends RestEsqlTestCase {
                     )
                 );
 
-                String castedQuery = """
-                    {
-                        "query": "FROM index-%s,index-%s | LIMIT 100 | EVAL my_field = my_field::%s"
-                    }
-                    """.formatted(
+                String castedQuery = String.format(
+                    Locale.ROOT,
+                    """
+                        {
+                            "query": "FROM index-%s,index-%s | LIMIT 100 | EVAL my_field = my_field::%s"
+                        }
+                        """,
                     listOfTypes.get(i).esType(),
                     listOfTypes.get(j).esType(),
                     suggestedCast == DataType.KEYWORD ? "STRING" : suggestedCast.nameUpper()
